# flir

./: .pre-commit-config.yaml  CMakeLists.txt
include/: CMakeLists.txt
include/incubated/Conversion/: CMakeLists.txt
include/incubated/Conversion/DiscreteMaskAccessConversion/: DiscreteMaskAccessConversionPass.h
include/incubated/Conversion/TritonToAnnotation/: Passes.h
include/incubated/Conversion/TritonToLinalgIncubated/: ArgMinMaxConverter.h  BlockPtrAnalysis.h  CMakeLists.txt  DescriptorConverter.h  HoistBroadcast.h  ImplicitPermute.h  LoadStoreConverter.h  MarkTensorKindPass.h  MaskAnalysis.h  Passes.h  Passes.td  TritonOpConverter.h  TritonToLinalgIncubatedPass.h  UseAnalysis.h
include/incubated/Conversion/TritonToStructuredIncubated/: CMakeLists.txt  CannonicalizerConverter.h  MaskAnalysis.h  MemOpConverter.h  Passes.h  Passes.td  PtrAnalysis.h  TritonToStructuredIncubatedPass.h
include/incubated/Dialect/: CMakeLists.txt
include/triton-shared/Conversion/: CMakeLists.txt
lib/Analysis/: OpFoldResultUtils.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/DiscreteMaskAccessConversion/: DiscreteMaskAccessConversionPass.cpp
lib/Conversion/ReconcilePtrCasts/: ReconcilePtrCastsPass.cpp
lib/Conversion/StructuredToMemref/: StructuredToMemrefPass.cpp
lib/Conversion/TritonPtrToMemref/: TritonPtrToMemrefPass.cpp
lib/Conversion/TritonToAnnotation/: TritonToAnnotation.cpp
lib/Conversion/TritonToLinalgExperimental/: TritonToLinalgExperimentalPass.cpp  TritonToPtrPass.cpp
lib/Conversion/TritonToLinalgIncubated/: ArgMinMaxConverter.cpp  BlockPtrAnalysis.cpp  CMakeLists.txt  DescriptorConverter.cpp  HoistBroadcast.cpp  ImplicitPermute.cpp  LoadStoreConverter.cpp  MarkTensorKindPass.cpp  MaskAnalysis.cpp  TritonOpConverter.cpp  TritonToLinalgIncubatedPass.cpp  TritonToLinalgPass.cpp  UseAnalysis.cpp
lib/Conversion/TritonToStructured/: CMakeLists.txt  TritonToStructuredPass.cpp
lib/Conversion/TritonToStructuredIncubated/: CMakeLists.txt  CannonicalizerConverter.cpp  MaskAnalysis.cpp  MemOpConverter.cpp  PtrAnalysis.cpp  TritonToStructuredIncubatedPass.cpp
lib/Conversion/TritonToUnstructureIncubated/: BubbleUpOperation.cpp  CMakeLists.txt  OffsetAnalysis.cpp  ReplaceArguments.cpp  UnstructureConversionPass.cpp
lib/Conversion/TritonToUnstructured/: AtomicOpsConverter.cpp  TritonToUnstructuredPass.cpp
lib/Dialect/: CMakeLists.txt
lib/UtilsIncubated/: InterleaveOptimization.cpp  Utils.cpp
tools/: RegisterTritonSharedDialects.h
(+22 files in other folders)
