add_subdirectory(TritonToLinalg)
add_subdirectory(TritonToLinalgExperimental)
add_subdirectory(TritonToStructured)
add_subdirectory(TritonToUnstructured)
add_subdirectory(TritonArithToLinalg)
add_subdirectory(StructuredToMemref)
add_subdirectory(TritonPtrToMemref)
add_subdirectory(UnstructuredToMemref)
add_subdirectory(MemrefCopyToDMA_FlagTree)
add_subdirectory(NoBufferize_FlagTree)
if (FLIR_BUILD_INCUBATED)
  add_subdirectory(TritonToAnnotation)
  add_subdirectory(TritonToLinalgIncubated)
  add_subdirectory(DiscreteMaskAccessConversion)
  add_subdirectory(TritonToUnstructureIncubated)
  add_subdirectory(TritonToStructuredIncubated)
endif()
